small change to about page for visibiliyt issue

--- a/frontend/src/components/ImageCard/style.scss
+++ b/frontend/src/components/ImageCard/style.scss
@@ -28,7 +28,10 @@
     margin: var(--margin-sm);
     padding: var(--margin-sm);
     position: absolute;
-    background-color: var(--secondary-background-color);
+    color: var(
+      --primary-font-color
+    ); // Notice the different color for fonts and background here
+    background-color: var(--secondary-background-color-dark);
     border-radius: 1rem;
     backdrop-filter: blur(10px);
     pointer-events: none;
